# envu-cli

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.lock.license  Cargo.toml  LICENSE  README.md
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml  reuse.yml
envu-cli/: Cargo.toml
libenvu/: Cargo.toml
libenvu/src/: lib.rs
